--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.0",
     "typescript": "^4.6.4",
     "ua-parser-js": "^1.0.2",
+    "url-parse": "^1.5.10",
     "web-vitals": "^2.1.3"
   },
   "eslintConfig": {
