--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,35 +6,35 @@ updates:
   - package-ecosystem: github-actions
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "monthly"
     target-branch: "bibble"
 
   - package-ecosystem: "docker" # See documentation for possible values
     directory: "/docker" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "monthly"
     target-branch: "bibble"
 
   - package-ecosystem: "npm" # see documentation for possible values
     directory: "/" # location of package manifests
     schedule:
-      interval: "daily"
+      interval: "monthly"
     target-branch: "bibble"
 
   - package-ecosystem: github-actions
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "monthly"
     target-branch: "bibble_hard"
 
   - package-ecosystem: "docker" # See documentation for possible values
     directory: "/docker" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "monthly"
     target-branch: "bibble_hard"
 
   - package-ecosystem: "npm" # see documentation for possible values
     directory: "/" # location of package manifests
     schedule:
-      interval: "daily"
+      interval: "monthly"
     target-branch: "bibble_hard"
